6-Structure, Enum and Union/.metadata/.plugins/org.eclipse.cdt.ui/Ex2.build.log
10:58:06 **** Incremental Build of configuration Debug for project Ex2 ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:14: error: C++ style comments are not allowed in ISO C90
  double m_R; // real number
              ^
..\main.c:12:14: error: (this will be reported only once per input file)

10:58:06 Build Finished (took 252ms)

